[package]
name = "pq-bindings-c-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["signature-scheme-prod"]
signature-scheme-prod = []
signature-scheme-test = []

[dependencies]
leansig = { git = "https://github.com/leanEthereum/leanSig.git", rev = "f10dcbefac2502d356d93f686e8b4ecd8dc8840a" }
rand = "0.9"
serde = "1"
serde_json = "1"

[build-dependencies]
cbindgen = "0.27"
